--- a/.eslintrc
+++ b/.eslintrc
@@ -26,7 +26,8 @@
     "react/prop-types": "off",
     "no-func-assign": "off",
     "react-hooks/exhaustive-deps": "off",
-    "complexity": ["error", 6]
+    "complexity": ["error", 6],
+    "react/react-in-jsx-scope": "off"
   },
   "globals": {
     "mq": true,
