--- a/package.json
+++ b/package.json
@@ -29,19 +29,21 @@
     "eslint": "^7.21.0",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "husky": "^4.3.8",
     "next": "10.0.5",
     "next-images": "^1.7.0",
     "next-pwa": "^5.0.5",
     "npm-run-all": "^4.1.5",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "path": "^0.12.7",
-    "prettier": "^2.2.1",
-    "pretty-quick": "^3.1.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-svg-loader": "^3.0.3",
     "stylelint": "^13.11.0",
     "stylelint-config-recommended": "^3.0.0"
+  },
+  "devDependencies": {
+    "husky": "4.3.8",
+    "prettier": "^2.2.1",
+    "pretty-quick": "^3.1.0"
   }
 }
