--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@zeit/next-css": "^1.0.1",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.21.0",
+    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "next": "10.0.5",
