--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@linaria/shaker": "^3.0.0-beta.1",
     "@linaria/stylelint": "^3.0.0-beta.1",
     "@linaria/webpack-loader": "^3.0.0-beta.1",
+    "@svgr/webpack": "^5.5.0",
     "@zeit/next-css": "^1.0.1",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.21.0",
@@ -38,7 +39,6 @@
     "path": "^0.12.7",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-svg-loader": "^3.0.3",
     "stylelint": "^13.11.0",
     "stylelint-config-recommended": "^3.0.0"
   },
