--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,14 +1,36 @@
 {
   "extends": [
-    "stylelint-config-recommended",
-    "@linaria/stylelint"
+    "stylelint-config-recommended"
   ],
-  "rules" : {
+  "rules": {
     "property-no-vendor-prefix": null,
     "no-descending-specificity": null,
     "rule-empty-line-before": [
       "always-multi-line",
-      { "except": ["first-nested"] }
+      {
+        "except": [
+          "first-nested"
+        ]
+      }
+    ],
+    "at-rule-no-unknown": [
+      true,
+      {
+        "ignoreAtRules": [
+          "extends",
+          "tailwind",
+          "apply",
+          "layer"
+        ]
+      }
+    ],
+    "selector-pseudo-class-no-unknown": [
+      true,
+      {
+        "ignorePseudoClasses": [
+          "global"
+        ]
+      }
     ]
   }
 }
