--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "dev": "next dev",
     "build": "npm run validate:ci && next build && next export",
     "format": "pretty-quick --staged",
-    "lint:css": "stylelint \"./**/*.{jsx,js}\"",
-    "lint:js": "eslint --max-warnings 0 \"./**/*.{jsx,js}\"",
+    "lint:css": "stylelint --fix \"./**/*.css\"",
+    "lint:js": "eslint --fix --max-warnings 0 \"./**/*.{jsx,js}\"",
     "validate": "npm-run-all --parallel format lint:css lint:js",
     "validate:ci": "npm-run-all --parallel lint:css lint:js"
   },
@@ -18,29 +18,29 @@
     }
   },
   "dependencies": {
-    "@linaria/babel-preset": "^3.0.0-beta.1",
-    "@linaria/core": "^3.0.0-beta.1",
-    "@linaria/react": "^3.0.0-beta.1",
-    "@linaria/shaker": "^3.0.0-beta.1",
-    "@linaria/stylelint": "^3.0.0-beta.1",
-    "@linaria/webpack-loader": "^3.0.0-beta.1",
+    "@frontenso/eslint-config-javascript": "^0.1.4",
+    "@frontenso/eslint-config-react": "^0.1.0",
     "@svgr/webpack": "^5.5.0",
-    "@zeit/next-css": "^1.0.1",
+    "@tailwindcss/jit": "^0.1.18",
+    "autoprefixer": "^10.2.5",
     "babel-eslint": "^10.1.0",
+    "classnames": "^2.3.1",
     "eslint": "^7.21.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "next": "10.0.5",
-    "next-images": "^1.7.0",
-    "next-pwa": "^5.0.5",
+    "eslint-plugin-security": "^1.4.0",
+    "eslint-plugin-sonarjs": "^0.6.0",
+    "eslint-plugin-unicorn": "^29.0.0",
+    "next": "^10.1.3",
     "npm-run-all": "^4.1.5",
-    "optimize-css-assets-webpack-plugin": "^5.0.4",
     "path": "^0.12.7",
+    "postcss": "^8.2.9",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "stylelint": "^13.11.0",
-    "stylelint-config-recommended": "^3.0.0"
+    "stylelint-config-recommended": "^3.0.0",
+    "tailwindcss": "^2.1.1"
   },
   "devDependencies": {
     "husky": "4.3.8",
